--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
   <main>
     <h1>Buku Tamu Digital</h1>
-    
+
     <form id="formTamu">
       <input type="text" id="nama" placeholder="Nama" required />
       <input type="text" id="pesan" placeholder="Pesan" required />
       <button type="submit">Kirim</button>
     </form>
+
+    <input type="text" id="cariNama" placeholder="Cari nama..." />
 
     <ul id="daftarTamu"></ul>
   </main>
